--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
+    "@vercel/analytics": "^1.4.1",
     "next": "15.1.3",
     "next-sanity": "^9.8.32",
     "react": "^19.0.0",
